Changed html of breadcrumbs,
story #3054970,
reviewed mwollenschlaeger

git-svn-id: https://svn.pkw.de/pkw.de/trunk/gems/breadcrumb@9505 a0138c44-f643-4d49-8908-3bd568d7ed4a

--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,11 @@
+=== 0.1.1 2010-04-06
+
+* 1 minor enhancement:
+  * Changed html of breadcrumbs
+
 === 0.0.1 2009-11-02
 
 * 1 major enhancement:
   * Initial release
+
+
